--- a/css/app.css
+++ b/css/app.css
@@ -29,7 +29,7 @@ body {
 }
 
 h1 {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Fontdiner Swanky', cursive;
     font-weight: 300;
 }
 
@@ -121,11 +121,21 @@ h1 {
     background-color: rgba(0,0,0,0.4);
 }
 .modal-content{
-    background-color: #fefefe;
+    background-color: #d5d5d5;
     margin:15% auto;
     padding: 20px;
-    border: 1px solid #888;
+    border: 2px solid #00b3e4;
+    border-radius: 25px;
+    box-shadow: 5px 5px #000000;
     width: 80%;
+}
+.modal-content h1{
+    font-family: 'Fontdiner Swanky', cursive;
+    text-align: center;
+}
+.modal-content li{
+    list-style:none;
+    display:inline-block;
 }
 .close{
     color: #aaa;
