--- a/css/app.css
+++ b/css/app.css
@@ -21,6 +21,12 @@ body {
     font-family: 'Coda', cursive;
 }
 
+header{
+    width: 100%;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+}
 .container {
     display: flex;
     justify-content: center;
@@ -87,10 +93,11 @@ h1 {
  */
 
 .score-panel {
-    text-align: left;
     font-size: 1.25em;
-    width: 345px;
+    width: 50%;
     margin-bottom: 10px;
+    display:inline-flex;
+    justify-content:space-around;
 }
 
 .score-panel .stars {
@@ -120,13 +127,9 @@ h1 {
     left: 0;
     top: 0;
     width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgb(0,0,0);
-    background-color: rgba(0,0,0,0.4);
 }
 .modal-content{
-    background-color: #d5d5d5;
+    background: #ffffff url('../img/geometry2.png'); /* Background pattern from Subtle Patterns */
     margin:15% auto;
     padding: 20px;
     border: 2px solid #00b3e4;
@@ -154,6 +157,8 @@ h1 {
 }
 #yes,
 #no{
+    width: 50px;
+    height: 50px;
     border-radius: 5px;
     padding: 10px;
     margin: 5px;
@@ -170,3 +175,4 @@ h1 {
     text-decoration: none;
     cursor: pointer;
 }
+
