--- a/css/app.css
+++ b/css/app.css
@@ -1,13 +1,15 @@
 html {
     box-sizing: border-box;
 }
-
+* {
+    margin: 0;
+    padding: 0;
+}
 *,
 *::before,
 *::after {
     box-sizing: inherit;
 }
-
 html,
 body {
     width: 100%;
@@ -15,14 +17,13 @@ body {
     margin: 0;
     padding: 0;
 }
-
 body {
     background: #ffffff url('../img/geometry2.png'); /* Background pattern from Subtle Patterns */
     font-family: 'Coda', cursive;
 }
-
 header{
     width: 100%;
+    padding: 2%;
     display: inline-flex;
     justify-content: center;
     align-items: center;
@@ -33,33 +34,28 @@ header{
     align-items: center;
     flex-direction: column;
 }
-
 h1 {
     font-family: 'Fontdiner Swanky', cursive;
     font-weight: 300;
 }
-
-/*
- * Styles for the deck of cards
- */
-
+/* Styles for the deck of cards */
 .deck {
-    width: 660px;
+    width: 96%;
     min-height: 680px;
     background: linear-gradient(160deg, #02ccba 0%, #aa7ecd 100%);
-    padding: 32px;
+    padding: 15px;
     border-radius: 10px;
     box-shadow: 12px 15px 20px 0 rgba(46, 61, 73, 0.5);
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     margin: 0 0 3em;
 }
-
 .deck .card {
     height: 125px;
-    width: 125px;
+    width: 115px;
+    margin: 2%;
     background: #2e3d49;
     font-size: 0;
     color: #ffffff;
@@ -70,36 +66,28 @@ h1 {
     align-items: center;
     box-shadow: 5px 2px 20px 0 rgba(46, 61, 73, 0.5);
 }
-
 .deck .card.open {
     transform: rotateY(0);
     background: #02b3e4;
     border: 1px solid #2e3d49;
     cursor: default;
 }
-
 .deck .card.show {
     font-size: 40px;
 }
-
 .deck .card.match {
     cursor: default;
     background: #02ccba;
     font-size: 33px;
 }
-
-/*
- * Styles for the Score Panel
- */
-
+/* Styles for the Score Panel */
 .score-panel {
     font-size: 1.25em;
-    width: 50%;
+    width: 90%;
     margin-bottom: 10px;
     display:inline-flex;
     justify-content:space-around;
 }
-
 .score-panel .stars {
     margin: 0;
     padding: 0;
@@ -107,19 +95,16 @@ h1 {
     color: #02ccba;
     margin: 0 10px;
 }
-
 .score-panel .stars li {
     list-style: none;
     display: inline-block;
     text-shadow: 1px 1px #000000;
 }
-
 .score-panel .restart {
     float: right;
     cursor: pointer;
 }
-
-/*Modal CSS */
+/* Styles for the Modal */
 .modal{
     display: none;
     position:fixed;
@@ -135,9 +120,8 @@ h1 {
     border: 2px solid #00b3e4;
     border-radius: 25px;
     box-shadow: 5px 5px #000000;
-    width: 80%;
+    width: 90%;
 }
-
 .modal-content h1{
     font-family: 'Fontdiner Swanky', cursive;
     text-align: center;
@@ -168,11 +152,27 @@ h1 {
 .play-again{
     text-align: center;
 }
-
 .close:hover,
 .close:focus{
     color: #000000;
     text-decoration: none;
     cursor: pointer;
 }
+/* Media Queries for Medium to Large Mobile Devices*/
 
+@media screen and (min-width: 425px){
+    .deck .card{
+        margin: 1%;
+    }
+    .score-panel{
+        width:75%;
+    }
+}
+@media screen and (min-width: 600px){
+    .deck{
+        width: 80%;
+    }
+    .score-panel{
+        width: 50%;
+    }
+}
