Chore: Updating Modal CSS for responsive design at higher screen sizes

--- a/css/app.css
+++ b/css/app.css
@@ -181,7 +181,8 @@ h1 {
     .score-panel{
         width: 30%;
     }
-    .modal{
-        width: 600px;
+    .modal-content{
+        width: 50%;
+
     }
 }
